# ColotCook

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  deny.toml
.claude/session-state/: latest.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
crates/api/: Cargo.toml
crates/api/src/: client.rs  error.rs  lib.rs  prompt_cache.rs  types.rs
crates/api/tests/: client_integration.rs  openai_compat_integration.rs  provider_client_integration.rs
crates/cli/: Cargo.toml
crates/cli/src/: app.rs  arg_parsing.rs  args.rs  init.rs  input.rs  live_cli.rs  main.rs  oauth_flow.rs  render.rs  reports.rs  runtime_build.rs  session_management.rs  streaming.rs  tool_display.rs  util.rs
crates/cli/tests/: cli_flags_and_config_defaults.rs  cli_integration.rs  resume_slash_commands.rs
crates/commands/: Cargo.toml
crates/commands/src/: agents_and_skills.rs  handlers.rs  help.rs  lib.rs  plugins_command.rs  types.rs  validation.rs
crates/plugins/: Cargo.toml
crates/plugins/src/: discovery.rs  hooks.rs  lib.rs  registry.rs  types.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: bootstrap.rs  compact.rs  config.rs  conversation.rs  file_ops.rs  hooks.rs  json.rs  lib.rs  logging.rs  mcp_http.rs  mcp_stdio.rs  oauth.rs  permissions.rs  prompt.rs  rate_limit.rs  remote.rs  sandbox.rs  session.rs  usage.rs
crates/telemetry/: Cargo.toml
crates/telemetry/src/: lib.rs
crates/tools/: .gitignore  Cargo.toml
crates/tools/src/: agent_tools.rs  execution_tools.rs  file_tools.rs  lib.rs  search_tools.rs  session_tools.rs  system_tools.rs  types.rs  web_tools.rs
docs/superpowers/plans/: 2026-04-04-code-quality-100-points.md
docs/superpowers/specs/: 2026-04-04-code-quality-100-points-design.md
scripts/: coverage.sh  generate-architecture-diagram.py  generate-demo-gif.py
(+6 files in other folders)
