[package]
name = "colotcook-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "colotcook"
path = "src/main.rs"

[dependencies]
colotcook-api = { path = "../api" }
colotcook-commands = { path = "../commands" }
crossterm = "0.28"
pulldown-cmark = "0.13"
rustyline = "15"
colotcook-runtime = { path = "../runtime" }
colotcook-plugins = { path = "../plugins" }
serde_json.workspace = true
syntect = "5"
tokio = { version = "1", features = ["rt-multi-thread", "signal", "time"] }
colotcook-tools = { path = "../tools" }

[lints]
workspace = true
