[package]
name = "colotcook-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
colotcook-api = { path = "../api" }
colotcook-plugins = { path = "../plugins" }
colotcook-runtime = { path = "../runtime" }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
tokio = { version = "1", features = ["rt-multi-thread"] }

[lints]
workspace = true
